gts-macros/tests/compile_fail/const_values_type_mismatch_string_to_float.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/const_values_type_mismatch_string_to_float.rs:20:1
   |
20 | / #[struct_to_gts_schema(
21 | |     dir_path = "schemas",
22 | |     base = MismatchSFltBaseV1,
23 | |     schema_id = "gts.x.test.mismatch.sflt.v1~x.test.mismatch.string_to_float.v1~",
...  |
26 | |     const_values = "score='high'"
27 | | )]
   | |  ^
   | |  |
   | |__expected `f64`, found `String`
   |    expected due to the type of this binding
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
